--- a/src/main/resources/templates/resend.html
+++ b/src/main/resources/templates/resend.html
@@ -15,19 +15,23 @@
     <title>Resend mail</title>
   </head>
   <body>
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Resend email</h5>
-        <div class="input-group mb-3">
-          <input
-            type="text"
-            name="email"
-            class="form-control"
-            placeholder="Your email"
-          />
-        </div>
+    <div class="container h-100">
+      <div class="row h-50 justify-content-center align-items-center">
+        <form class="col-12">
+          <div class="form-group">
+            <label for="formGroupExampleInput">Example label</label>
+            <input
+              type="text"
+              name="email"
+              class="form-control"
+              id="formGroupExampleInput"
+              placeholder="Your email"
+            />
+          </div>
+        </form>
       </div>
     </div>
+
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
